# palabras

./: .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml  schema.graphql  translations_config.json  vocab_config.json
.github/workflows/: rust.yml
data/: export.csv  llm_import.csv  vocab.json
data/mananoreboton/: CHANGELOG.md  short-es-en.xml
docs/: db.md  developers.md  gql.txt  imports.md  testing.md
migrations/2024-02-11-181227_create_translation_pair/: down.sql  up.sql
migrations/2024-02-11-183009_create_progress_stats/: down.sql  up.sql
migrations/2024-02-13-200246_alter_translation_pair/: down.sql  up.sql
migrations/2024-02-14-145550_alter_translation_pair_add_alternatives/: down.sql  up.sql
migrations/2024-02-17-162537_alter_translation_pair_def_correct/: down.sql  up.sql
migrations/2024-02-18-163956_alter_translation_pair_add_fields/: down.sql  up.sql
migrations/2024-02-25-151258_alter_translation_pair_add_fields2/: down.sql  up.sql
migrations/2024-02-26-200258_alter_translation_pair_add_direction/: down.sql  up.sql
migrations/2024-03-03-011159_alter_translation_pair/: down.sql  up.sql
migrations/2024-03-04-171552_alter_translation_pairs_add_user_notes/: down.sql  up.sql
migrations/2024-03-06-191514_big_schema_change/: down.sql  up.sql
migrations/2024-03-11-193142_alt_vocab_study_add_correct/: down.sql  up.sql
migrations/2024-03-16-134816_alter_awesome_person/: down.sql  up.sql
src/: config.rs  dal.rs  gql.rs  gui.rs  lib.rs  main.rs  models.rs  schema.rs  sl.rs  test_fixtures.rs
src/aws/: glue.rs
src/dal/: awesome_person.rs  db_connection.rs  file_access.rs  progress_stats.rs  translation_pair.rs  vocab.rs  vocab_study.rs
src/gql/: router.rs  studies.rs
src/gui/: card.rs  study_words.rs
src/sl/: duo_import.rs  fuzzy_match_vocab.rs  learn_pairs.rs  study_vocab.rs  sync_vocab.rs
tests/: awesome_person_test.rs  config_test.rs  export_first_lang_missing_test.rs  file_access_test.rs  fuzzy_match_vocab_test.rs  progress_stats_test.rs  study_vocab_test.rs  sync_vocab_test.rs  translation_pair_test.rs  vocab_test.rs
tests/data/: test_file.txt  testing_amarilla.json  testing_playa.json  testing_small_vocab.json  testing_study_vocab.json
tests/data/es_en_mapping/: llm_import.csv  test_export.csv
